Added Twitter bootstrap

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,5 +7,5 @@ Enter a program:
     Program URL: <input type="text" name="program_uri">
     Add Section Filter: <input type="text" name="sections">
     Add Keyword Filter: <input type="text" name="keyword">
-    <input type="submit">
+    <input type="submit" class="btn">
 </form>
