--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <script href="css/bootstrap/js/bootstrap.js" type="text/javascript"></script>
+    </head>
     <body>
 
         <%= yield %>
