Pulling courses together, need to fix the filtering

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,16 @@
 <h2>Schedule Scraper</h2>
 
-Enter a program:
 
 <form action="output" method="post">
-    Program Name: <input type="text" name="program_name">
-    Program URL: <input type="text" name="program_uri">
-    Add Section Filter: <input type="text" name="sections">
-    Add Keyword Filter: <input type="text" name="keyword">
+    
+    <% 3.times do |n| %>
+        Enter a program:
+        Program Name: <input type="text" name="<%="program_#{n}"%>[program_name]">
+        Program URL: <input type="text" name="<%="program_#{n}"%>[program_uri]">
+        Add Section Filter: <input type="text" name="<%="program_#{n}"%>[sections]">
+        Add Keyword Filter: <input type="text" name="<%="program_#{n}"%>[keyword]">
+        <br />
+        <br />
+    <% end %>
     <input type="submit" class="btn">
 </form>
