--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,12 +2,21 @@
     <head>
         <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <script href="css/bootstrap/js/bootstrap.js" type="text/javascript"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script href="css/bootstrap/js/bootstrap.js"></script>
+        <script href="js/page.js" type="text/javascript"></script>
+        <script type="text/javascript">
+
+           $(document).ready(function() {
+    $("a").tooltip();
+}) 
+        </script>
+
     </head>
     <body>
 
         <div class="header">
-            <h1>Schedule Scraper</h1>
+            <h1><a href="/">Schedule Scraper</a></h1>
         </div>
 
         <div class="main-content">
