--- a/views/index.erb
+++ b/views/index.erb
@@ -3,11 +3,17 @@
     <% 4.times do |n| %>
         Program Name: <input type="text" class="input-small" placeholder="i.e. EDUC" name="<%="program_#{n}"%>[program_name]">
         Program URL: <input type="text" placeholder="htt://duapp2.drexel.edu/..." name="<%="program_#{n}"%>[program_uri]">
-        <a href="#" rel="tooltip" title="first tooltip">Add Section Filter:</a> <input type="text" class="input-small" placeholder="96" name="<%="program_#{n}"%>[sections]">
-        Add Keyword Filter: <input type="text" class="input-small" placeholder="i.e. math" name="<%="program_#{n}"%>[keyword]">
+        <a href="#" rel="tooltip" title="Put '96' for all 900 and 600 courses. Leave blank for all sections.">Sections:</a> <input type="text" class="input-small" placeholder="96" name="<%="program_#{n}"%>[sections]">
+        Keyword: <input type="text" class="input-small" placeholder="i.e. math" name="<%="program_#{n}"%>[keyword]">
         <hr>
         <br />
         <br />
     <% end %>
     <input type="submit" class="btn btn-primary">
 </form>
+
+<script type="text/javascript">
+  $(document).ready(function () {
+    $("[rel=tooltip]").tooltip();
+  });
+</script>
