--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,15 +2,8 @@
     <head>
         <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script href="css/bootstrap/js/bootstrap.js"></script>
-        <script href="js/page.js" type="text/javascript"></script>
-        <script type="text/javascript">
-
-           $(document).ready(function() {
-    $("a").tooltip();
-}) 
-        </script>
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="css/bootstrap/js/bootstrap.js"></script>
 
     </head>
     <body>
