--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,13 @@
     <body>
 
         <div class="header">
-            <h1><a href="/">Schedule Scraper</a></h1>
+            <div class="title">
+                <h1><a href="/">Schedule Scraper</a></h1>
+            </div>
+            <div class="info">
+                <a href="https://github.com/jasonblanchard/schedule-scraper" target="_blank">Fork me on github</a> <i class="icon-random"></i> <br /> 
+                <a href="https://github.com/jasonblanchard/schedule-scraper/issues" target="_blank">I found a bug</a> <i class="icon-comment"></i>
+            </div>
         </div>
 
         <div class="main-content">
