--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<p class="lead"><a href="https://duapp2.drexel.edu/webtms_du/app?page=Home&service=page" target="_blank">Grab the program pages</a> and enter the info:</p>
+<p class="lead"><a href="https://duapp2.drexel.edu/webtms_du/app?page=Home&service=page" target="_blank">Grab program pages</a> and enter the info:</p>
 <form action="output" method="post" class="form-inline">
     <% 6.times do |n| %>
         Program Name: <input type="text" class="input-small" placeholder="i.e. EDUC" name="<%="program_#{n}"%>[program_name]">
