--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
             </div>
             <div class="info">
                 <a href="https://github.com/jasonblanchard/schedule-scraper" target="_blank">Fork me on github</a> <i class="icon-random"></i> <br /> 
-                <a href="https://github.com/jasonblanchard/schedule-scraper/issues" target="_blank">I found a bug</a> <i class="icon-comment"></i>
+                <a href="https://github.com/jasonblanchard/schedule-scraper/issues" target="_blank">I found a bug!</a> <i class="icon-comment"></i>
             </div>
         </div>
 
