Removed placeholder for sections

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
         <br />
         Program Name: <input type="text" class="input-small" placeholder="i.e. EDUC" name="<%="program_#{n}"%>[program_name]">
         Program URL: <input type="text" placeholder="htt://duapp2.drexel.edu/..." name="<%="program_#{n}"%>[program_uri]">
-        <a href="#" rel="tooltip" title="Put '96' for all 900 and 600 courses. Leave blank for all sections.">Sections:</a> <input type="text" class="input-small" placeholder="i.e. 96" name="<%="program_#{n}"%>[sections]">
+        <a href="#" rel="tooltip" title="Put '96' for all 900 and 600 courses. Leave blank for all sections.">Sections:</a> <input type="text" class="input-small"  name="<%="program_#{n}"%>[sections]">
         Keyword: <input type="text" class="input-small" placeholder="i.e. math" name="<%="program_#{n}"%>[keyword]">
         <hr>
     <% end %>
