--- a/views/index.erb
+++ b/views/index.erb
@@ -2,13 +2,14 @@
 <form action="output" method="post" class="form-inline">
     <% 6.times do |n| %>
         <br />
-        Program Name: <input type="text" class="input-small" placeholder="i.e. EDUC" name="<%="program_#{n}"%>[program_name]">
-        Program URL: <input type="text" placeholder="htt://duapp2.drexel.edu/..." name="<%="program_#{n}"%>[program_uri]">
-        <a href="#" rel="tooltip" title="Put '96' for all 900 and 600 courses. Leave blank for all sections.">Sections:</a> <input type="text" class="input-small"  name="<%="program_#{n}"%>[sections]">
-        Keyword: <input type="text" class="input-small" placeholder="i.e. math" name="<%="program_#{n}"%>[keyword]">
+        Program Name: <input type="text" class="input-small" placeholder="i.e. EDUC" name="programs[<%="program_#{n}"%>][program_name]">
+        Program URL: <input type="text" placeholder="htt://duapp2.drexel.edu/..." name="programs[<%="program_#{n}"%>][program_uri]">
+        <a href="#" rel="tooltip" title="Put '96' for all 900 and 600 courses. Leave blank for all sections.">Sections:</a> <input type="text" class="input-small"  name="programs[<%="program_#{n}"%>][sections]">
+        Keyword: <input type="text" class="input-small" placeholder="i.e. math" name="programs[<%="program_#{n}"%>][keyword]">
         <hr>
     <% end %>
     <input type="submit" class="btn btn-primary">
+    <input type="checkbox" name="save" value="1"> Save this search?</input>
 </form>
 
 <script type="text/javascript">
