Fixed some saving issues

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,6 +10,7 @@
     <% end %>
     <input type="submit" class="btn btn-primary">
     <input type="checkbox" name="save" value="1"> Save this search?</input>
+    <input type="text" placeholder="Saved search name" name="save_name">
 </form>
 
 <script type="text/javascript">
