Saved searches mostly working

--- a/views/index.erb
+++ b/views/index.erb
@@ -17,9 +17,10 @@
 <form action="output" method="post" class="form-inline">
     <ul class="unstyled">
         <% @saved_searches.each do |name,params| %>
-            <li><input type="radio" name="<%= "${name}" %>"> <%= name %></li>
+            <li><input type="radio" name="name" value="<%= "#{name}" %>"> <%= name %></li>
         <% end %>
     </ul>
+    <input type="hidden" name="use_saved_values" value="1">
     <input type="submit" class="btn">
 </form>
 
