UI and removed duplicate code

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
             <hr>
         <% end %>
         <input type="submit" value="Grab Courses" class="btn btn-primary">
-        <input type="checkbox" name="save" value="1"> Save this search?</input>
+        <input type="checkbox" name="save" value="1"> <a href="#" rel=tooltip title="This will overwrite saved searches with the same name, so use this wisely"> Save this search?</a></input>
         <input type="text" placeholder="Saved search name" name="save_name">
     </form>
 </div>
