Added title to head

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,8 @@
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="css/bootstrap/js/bootstrap.js"></script>
 
+        <title>Schedule Scraper</title>
+
     </head>
     <body>
 
