Added help popover. Might want to move this to a specific help button

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
-<p class="lead"><a href="https://duapp2.drexel.edu/webtms_du/app?page=Home&service=page" target="_blank">Grab program pages</a> and enter the info:</p>
+<p class="lead"><a href="https://duapp2.drexel.edu/webtms_du/app?page=Home&service=page"rel=popover data-placement="bottom" data-content="For each program, copy the URL of the page that lists all the courses." title="Term Master Schedule" target="_blank">Grab program pages</a> and enter the info:</p>
+
 <div class="program-form">
     <form action="output" method="post" class="form-inline">
         <% 6.times do |n| %>
@@ -30,6 +31,15 @@
 
 <script type="text/javascript">
   $(document).ready(function () {
-    $("[rel=tooltip]").tooltip();
+          $("[rel=tooltip]").tooltip();
+
+          $("[rel=popover]").hover(
+              function () {
+                $(this).popover('show');
+              },
+              function () {
+                $(this).popover('hide');
+                }
+              );
   });
 </script>
