Moved help text to icon

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<p class="lead"><a href="https://duapp2.drexel.edu/webtms_du/app?page=Home&service=page"rel=popover data-placement="bottom" data-content="For each program, copy the URL of the page that lists all the courses." title="Term Master Schedule" target="_blank">Grab program pages</a> and enter the info:</p>
+<p class="lead"><a href="https://duapp2.drexel.edu/webtms_du/app?page=Home&service=page" target="_blank">Grab program pages</a> and enter the info: <a href="#" rel=popover data-placement="right" data-content="For each program, copy the URL of the page that lists all the courses." title="Term Master Schedule"><i class="icon-question-sign"></i></a></p>
 
 <div class="program-form">
     <form action="output" method="post" class="form-inline">
