Styled the delete button

--- a/views/output.erb
+++ b/views/output.erb
@@ -22,8 +22,8 @@
 </table>
 
 <% if params[:use_saved_values] %>
-    <form action="/" method="post" class="form-inline">
+    <form action="/" method="post" class="form-inline delete-saved-search">
         <input type="hidden" name="delete_saved_search" value="<%= params[:name] %>">
-        <input type="submit" class="btn" value="Delete saved search">
+        <input type="submit" class="btn btn-danger" value="Delete saved search">
     </form>
 <% end %>
