--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,13 @@
     </head>
     <body>
 
+        <% if flash[:notice] %>
+            <div class="alert alert-success notice">
+                <button type="button" class="close" data-dismiss="alert">×</button>
+                <%= flash[:notice] %>
+            </div>
+        <% end %>
+
         <div class="header">
             <div class="title">
                 <h1><a href="/">Schedule Scraper</a></h1>
