Added vimeo video and some styles

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,6 +17,9 @@
              </div>
              <div class="modal-body">
                  <p>A script runs behind the scenes that follows the link to the schedule page, reads the page, and returns it as a structured document. Each time you grab courses or view a saved search, it recalculates the courses and returns updated course data.</p>
+                 <div class="demo-video">
+                     <iframe src="http://player.vimeo.com/video/52644468?badge=0" width="500" height="321" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> <p><a href="http://vimeo.com/52644468">Schedule Scraper Demo</a> from <a href="http://vimeo.com/user14435704">jwb82</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+                 </div>
              </div>
              <div class="modal-footer">
                  <button class="btn" data-dismiss="modal" aria-hidden="true">Got it</button>
