Moved the icons to the left side

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,9 +39,9 @@
             </div>
             <div class="info">
                 <ul class="unstyled">
-                    <li><a href="#demo" role="button" data-toggle="modal">How does it work? </a><i class="icon-info-sign"></i><br /></li>
-                    <li><a href="https://github.com/jasonblanchard/schedule-scraper" target="_blank">Fork me on github</a> <i class="icon-random"></i> <br /> </li>
-                    <li><a href="https://github.com/jasonblanchard/schedule-scraper/issues" target="_blank">Oops! I found a bug</a> <i class="icon-comment"></i></li>
+                    <li><i class="icon-info-sign"></i> <a href="#demo" role="button" data-toggle="modal">How does it work? </a></li>
+                    <li> <i class="icon-random"></i> <a href="https://github.com/jasonblanchard/schedule-scraper" target="_blank">Fork me on github</a> </li>
+                    <li><i class="icon-comment"></i> <a href="https://github.com/jasonblanchard/schedule-scraper/issues" target="_blank">Oops! I found a bug</a> </li>
                 </ul>
             </div>
         </div>
